--- a/2-guia/ejercicios-2/ej-10-2.tex
+++ b/2-guia/ejercicios-2/ej-10-2.tex
@@ -30,8 +30,8 @@
                 Desarrollemos el lado izquierdo de la desigualdad:
                 \begin{align*}
                   2^{n+3}   & = 2 \cdot 2^{n+2} \menorIgual{HI} 2 \cdot (3^n + 5^n) = 2 \cdot 3^n + 2 \cdot 5^n \leq
-                  3 \cdot 3^n + 5 \cdot 5^n = 3^{n+1} + 5^{n+1}                                                 \\
-                  2^{n+3}   & \leq 3^{n+1} + 5^{n+1}                                                            \\
+                  3 \cdot 3^n + 5 \cdot 5^n = 3^{n+1} + 5^{n+1}                                                      \\
+                  2^{n+3}   & \leq 3^{n+1} + 5^{n+1}                                                                 \\
                   \entonces & P(n+1): V
                 \end{align*}
         \end{enumerate}
@@ -306,76 +306,69 @@
 
         Hemos probado el caso base y el paso inductivo. Concluimos que $\paratodo n \en \naturales, \ Q(n): V$.
 
-  \item $P(n):  \productoria{i=1}{n}\frac{4i-1}{n+i} \geq 1, \ n \en \naturales$.
-        \begin{enumerate}[label=\arabic*)]
-          \item Caso base, $n = 1$:
-                \begin{align*}
-                  P(1) & : \productoria{i=1}{1} \frac{4i-1}{1+i} \geq 1 \\
-                  P(1) & : \frac{3}{2} \geq 1 \entonces P(1): V
-                \end{align*}
-          \item Paso inductivo. Sea $n \en \naturales$:
-                \begin{enumerate}
-                  \item[HI.] $P(n): V$
-                  \item[TI.] $P(n+1):  \productoria{i=1}{n+1} \frac{4i-1}{n+1+i} \geq 1 $
-                \end{enumerate}
+  \item
+        Quiero probar que la proposición:
+        $$
+          p(n):
+          \productoria{i=1}{n} \frac{4i-1}{n+i} \geq 1, \ n \en \naturales
+        $$
+        es verdadera.
 
-                Desarrollemos el lado derecho de la desigualdad:
-                \begin{align*}
-                  1           & \menorIgual{HI} \productoria{i=1}{n} \frac{4i-1}{n+i} = \frac{4(n+1)-1}{4(n+1)-1} \cdot
-                  \frac{n + (n+1)}{n + (n+1)} \cdot \productoria{i=1}{n} \frac{4i-1}{n+i} \igual{*}                                   \\
-                              & \igual{*}\frac{n+(n+1)}{4(n+1)-1} \cdot
-                  \frac{4(n+1)-1}{n+(n+1)} \cdot \productoria{i=1}{n} \frac{4i-1}{n+i} = \frac{n+(n+1)}{4(n+1)-1} \cdot
-                  \productoria{i=1}{n+1} \frac{4i-1}{n+i} \igual{**}                                                                  \\
-                              & \igual{**} \frac{2n+1}{4n+3} \cdot \productoria{i=1}{n+1} \frac{4i-1}{n+i} \cdot \frac{n+1+i}{n+1+i}
-                  = \frac{2n+1}{4n+3} \cdot \productoria{i=1}{n+1} \frac{4i-1}{n+1+i} \cdot \frac{n+1+i}{n+i} \igual{***}             \\
-                              & \igual{***} \frac{2n+1}{4n+3} \cdot \productoria{i=1}{n+1} \frac{4i-1}{n+1+i}
-                  \productoria{i=1}{n+1}  \frac{n+1+i}{n+i} \igual{\tiny Aux.1} \frac{2n+1}{4n+3} \cdot
-                  \productoria{i=1}{n+1} \frac{4i-1}{n+1+i} \cdot 2 =                                                                 \\
-                              & = 2 \cdot \frac{2n+1}{4n+3} \cdot \productoria{i=1}{n+1} \frac{4i-1}{n+1+i} = \frac{4n+2}{4n+3} \cdot
-                  \productoria{i=1}{n+1} \frac{4i-1}{n+1+i} \menorIgual{\tiny Aux.2} 1 \cdot
-                  \productoria{i=1}{n+1} \frac{4i-1}{n+1+i}                                                                           \\
-                  \entonces 1 & \leq \productoria{i=1}{n+1} \frac{4i-1}{n+1+i} \entonces P(n+1):V
-                \end{align*}
-        \end{enumerate}
+        \textit{Caso base:}
 
-        Hemos probado el caso base y el paso inductivo. Concluimos que $\paratodo n \en \naturales, \ Q(n): V$.
+        La proposición para $\blue{n = 1}$
+        $$
+          p(\blue{1})  : \productoria{i=1}{\blue{1}} \frac{4i-1}{\blue{1} + i} = \frac{3}{2} \geq 1
+        $$
+        es trivialmente verdadera.
 
-        \subsubsection*{Auxiliar 1}
-        Recordemos la formula del factorial de $n$
-        \begin{align*}
-          n! = \productoria{i=1}{n}  i = 1 \cdot 2 \dots n
-        \end{align*}
-        Veamos que pasa si sumamos una constante $k \en \naturales$ a la parte de la productoria
-        \begin{align*}
-          \productoria{i=1}{n}  (k + i) & = (k+1) \cdot (k+2) \dots (k+n) = \frac{1 \cdot 2 \dots k}{1 \cdot 2 \dots k}
-          (k+1) \cdot (k+2) \dots (k+n)                                                                                                         \\
-                                        & = \frac{1 \cdot 2 \dots k \cdot (k+1) \cdot (k+2) \dots (k+n)}{1 \cdot 2 \dots k} = \frac{(k+n)!}{k!} \\
-          \productoria{i=1}{n}  (k + i) & = \frac{(k+n)!}{k!}
-        \end{align*}
+        \textit{Paso inductivo:}
 
-        Calculemos $ \productoria{i=1}{n+1}  \frac{n+1+i}{n+i}$
-        \begin{align*}
-          \productoria{i=1}{n+1}  \frac{n+1+i}{n+i}           & = \frac{ \productoria{i=1}{n+1}  n+1+i}
-          { \productoria{i=1}{n+1}  n+i}
-          = \frac{\frac{(n+1 + n+1)!}{(n+1)!}}{ \frac{(n+n+1)!}{n!}}
-          = \frac{ \frac{(2n+2)!}{(n+1)!}}{ \frac{(2n+1)!}{n!}}                                                                                                \\
-                                                              & = \frac{(2n+2)!}{(n+1)!}: \frac{(2n+1)!}{n!} = \frac{(2n+2)!}{(n+1)!} \cdot \frac{n!}{(2n+1)!} \\
-                                                              & = \frac{(2n+2)(2n+1)!}{(n+1)n!} \cdot \frac{n!}{(2n+1)!}
-          = \frac{2(n+1)(2n+1)!}{(n+1)n!} \cdot \frac{n!}{(2n+1)!}                                                                                             \\
-                                                              & = 2 \frac{(n+1)(2n+1)!n!}{(n+1)(2n+1)!n!} = 2                                                  \\
-          \entonces \productoria{i=1}{n+1}  \frac{n+1+i}{n+i} & = 2
-        \end{align*}
+        Asumo que para algún $\blue{k} \en \naturales$ la proposición:
+        $$
+          \textstyle
+          p(\blue{k}): ~ \ub{
+            \productoria{i=1}{\blue{k}} \frac{4i-1}{\blue{k} + i} \geq 1
+          }{
+            \text{\purple{hipótesis inductiva}}
+          }
+        $$
+        es verdadera, entonces quiero probar que la proposición
+        $$
+          \textstyle
+          p(\blue{k + 1}): ~ \productoria{i=1}{\blue{k + 1}} \frac{4i-1}{\blue{k + 1} + i} \geq 1
+        $$
+        también lo sea.
 
-        \subsubsection*{Auxiliar 2}
-        \begin{align*}
-          2 \leq 3 \entonces 4n + 2 \leq 4n + 3 \entonces \frac{4n+2}{4n+3} \leq 1
-        \end{align*}
+        Como tengo a la $n$ dentro del factor principal de la productoria,
+        la abro y ahí encuentro la \purple{hipótesis inductiva}.
+        $$
+          \begin{array}{rcl}
+            \productoria{i=1}{\blue{k + 1}} \frac{4i-1}{\blue{k + 1} + i}
+             & =                        &
+            \frac{3}{\blue{k}+2} \cdot \frac{7}{\blue{k}+3} \cdots \frac{4(\blue{k}-1) - 1}{2\blue{k}} \cdot \frac{4\blue{k} - 1}{2\blue{k} + 1} \cdot \frac{4(\blue{k}+1) - 1}{2\blue{k}+2}                       \\
+             & \igual{\red{!!}}         &
+            \frac{\green{\blue{k} + 1}}{\green{\blue{k} + 1}} \cdot
+            \frac{3}{\blue{k}+2} \cdot \frac{7}{\blue{k}+3} \cdots \frac{4(\blue{k}-1) - 1}{2\blue{k}} \cdot \frac{4\blue{k} - 1}{2\blue{k} + 1} \cdot \frac{4(\blue{k}+1) - 1}{2\blue{k}+2}                       \\
+             & \igual{\red{!!!}}        &
+            (\green{\blue{k} + 1}) \cdot
+            \frac{3}{\green{\blue{k} + 1}} \cdot \frac{7}{\blue{k}+2} \cdot \frac{11}{\blue{k}+3} \cdots \frac{4\blue{k} - 1}{2\blue{k}} \cdot \frac{4(\blue{k}+1) - 1}{2\blue{k} + 1} \cdot \frac{1}{2\blue{k}+2} \\
+             & \mayorIgual{\purple{HI}} &
+            (\green{\blue{k} + 1}) \cdot \frac{4(\blue{k}+1) - 1}{2\blue{k} + 1} \cdot \frac{1}{2\blue{k}+2}                                                                                                       \\
+             & \igual{\red{!}}          &
+            \frac{4\blue{k} + 3}{4\blue{k} + 2} \geq 1                                                                                                                                                             \\
+          \end{array}
+        $$
+        Por lo tanto $p(k+1)$ también es verdadera.
+
+        Dado que $p(1), p(\blue{k}) \ytext p(\blue{k + 1})$ son verdaderas,
+        por principio de inducción también lo es $p(n) \paratodo n \en \naturales$
+
 \end{enumerate}
 
 % Contribuciones
-\begin{aportes}
-  %% iconos : \github, \instagram, \tiktok, \linkedin
-  %\aporte{url}{nombre icono}
+\begin{aportes}[3]
   \item \aporte{https://github.com/koopardo/}{Marcos Zea \github}
   \item \aporte{\neverGonnaGiveYouUp}{Damián Rojas \youtube}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
 \end{aportes}
