fix typo ej 17 guia 3

--- a/3-guia/ejercicios-3/ej-17-3.tex
+++ b/3-guia/ejercicios-3/ej-17-3.tex
@@ -46,7 +46,7 @@ $\binom{n}{k} = \frac{n!}{k!(n-k)!}$
         También se puede encarar este tipo de problemas, pensando en sacarle a \underline{todos} los conjuntos que me puedo formar,
         la cantidad de elementos que tengan 1, usando así los resultados del item \ref{ej-17:item-ii} y del item \ref{ej-17:item-i}
         $$
-          \binom{7}{4} - \binom{6}{4} = 35 - 20 =
+          \binom{7}{4} - \binom{6}{3} = 35 - 20 =
           \cajaResultado{
             15
           }.
@@ -69,4 +69,5 @@ $\binom{n}{k} = \frac{n!}{k!(n-k)!}$
 
 \begin{aportes}
   \item \aporte{\dirRepo}{naD GarRaz \github}
+  \item \aporte{https://github.com/fransureda}{Francisco Sureda \github}
 \end{aportes}
