remaster ej 10 v guia 2

--- a/1-guia/ejercicios-1/ej-22-1.tex
+++ b/1-guia/ejercicios-1/ej-22-1.tex
@@ -307,12 +307,15 @@ Voy a estar usando cosas del \hyperlink{teoria-1:relaciones}{resumen teórico de
         \textit{Simétrica:}
 
         La relación no es simétrica. Se puede ver con la \cyan{segunda y tercera} fila de la tabla con un contraejemplo.
-        $X = \set{1}$ y $Y = \set{2},\, X,Y \subseteq A$, $X \relacion Y$, pero $Y \norelacion X$,
+
+        Si $X = \set{1}$ y $Y = \set{2},\, X,Y \subseteq A$, $X \relacion Y$, pero $Y \norelacion X$,
 
         \textit{Anti-Simétrica:}
 
-        La relación no es antisimétrica. Se puede ver con la \magenta{primera o cuarta} fila tabla con un contraejempl
-        con un contraejemplo. Si $X = \set{1,2}$ e $Y = \set{2,3} \entonces X \relacion Y$ y además $Y \relacion X$
+        La relación no es antisimétrica. Se puede ver con la \magenta{primera o cuarta} fila tabla
+        con un contraejemplo.
+
+        Si $X = \set{1,2}$ e $Y = \set{2,3} \entonces X \relacion Y$ y además $Y \relacion X$
         con  $X \distinto Y$.
 
         \textit{Transitiva:}
