--- a/2-guia/ejercicios-2/ej-10-2.tex
+++ b/2-guia/ejercicios-2/ej-10-2.tex
@@ -13,7 +13,7 @@
   \end{multicols}
 \end{enunciado}
 
-\begin{enumerate}[label=\roman*)]
+\begin{enumerate}[label=\magenta{\roman*)}]
   \item $P(n): 3^n + 5^n \geq 2^{n+2},\ n \en \naturales$
         \begin{enumerate}[label=\arabic*)]
           \item Caso base, $n = 1$:
@@ -231,61 +231,96 @@
         Dado que $p(1), p(\blue{k}) \ytext p(\blue{k + 1})$ son verdaderas,
         por principio de inducción también lo es $p(n) \paratodo n \en \naturales$
 
-  \item $P(n):  \sumatoria{i=1}{2^n} \frac{1}{2i-1} > \frac{n+3}{4}, \ n \en \naturales$.
-        \begin{enumerate}[label=\arabic*)]
-          \item Caso base, $n = 1$:
-                \begin{align*}
-                  P(1) & : \sumatoria{i=1}{2^1} \frac{1}{2i-1} > \frac{1+3}{4} \\
-                  P(1) & : \frac{1}{1} + \frac{1}{3} > 1  \entonces P(1): V
-                \end{align*}
+  \item
+        Quiero probar que la proposición
+        $$
+          p(n):  \sumatoria{i=1}{2^n} \frac{1}{2i-1} > \frac{n+3}{4}, \, n \en \naturales
+        $$
+        es verdadera.
 
-          \item Paso inductivo. Sea $n \en \naturales$:
-                \begin{enumerate}
-                  \item[HI.] $P(n): V$
-                  \item[TI.] $P(n+1):  \sumatoria{i=1}{2^{n+1}} \frac{1}{2i-1} > \frac{n+4}{4}$
-                \end{enumerate}
+        \textit{Caso base:}
+        $$
+          p(\blue{1}) : \sumatoria{i=1}{2^{\blue{1}}} \frac{1}{2i - 1}
+        $$
+        Es verdadera inmediatamente:
+        $$
+          \sumatoria{i=1}{2^{\blue{1}}} \frac{1}{2i - 1} = 1 + \frac{1}{3} > \frac{\blue{1} + 3}{4} = 1
+        $$
 
-                Desarrollemos el lado derecho de la desigualdad:
-                \begin{align*}
-                  \frac{n+4}{4}           & = \frac{1}{4} + \frac{n+3}{4} \overset{\text{HI}}{<} \frac{1}{4} + \sumatoria{i=1}{2^n}
-                  \frac{1}{2i-1} = \frac{1}{4} + \sumatoria{i=2^n + 1}{2^{n+1}} \frac{1}{2i-1} - \sumatoria{i=2^n + 1}{2^{n+1}}
-                  \frac{1}{2i-1} + \sumatoria{i=1}{2^n} \frac{1}{2i-1} \igual{*}                                                             \\
-                                          & \igual{*} \frac{1}{4} - \sumatoria{i=2^n + 1}{2^{n+1}} \frac{1}{2i-1} + \sumatoria{i=1}{2^{n+1}}
-                  \frac{1}{2i-1} \overset{\text{Aux.1}}{<} 0 + \sumatoria{i=1}{2^{n+1}} \frac{1}{2i-1} = \sumatoria{i=1}{2^{n+1}}
-                  \frac{1}{2i-1}                                                                                                             \\
-                  \entonces \frac{n+4}{4} & < \sumatoria{i=1}{2^{n+1}} \frac{1}{2i-1} \entonces P(n+1):V
-                \end{align*}
-        \end{enumerate}
+        \textit{Paso inductivo:}
 
-        Hemos probado el caso base y el paso inductivo. Concluimos que $\paratodo n \en \naturales, \ P(n): V$.
+        Asumo que para algún $\blue{k} \en \naturales$ la proposición
+        $$
+          p(\blue{k}): \ub{
+            \sumatoria{i=1}{2^{\blue{k}}} \frac{1}{2i-1} > \frac{\blue{k} + 3}{4}
+          }{
+            \text{\purple{hipótesis inductiva}}
+          }
+        $$
+        es verdadera. Entonces quiero probar que:
+        $$
+          p(\blue{k} + 1): \sumatoria{i=1}{2^{\blue{k} + 1}} \frac{1}{2i-1} > \frac{(\blue{k} + 1) + 3}{4}
+        $$
+        también lo sea.
 
-        \subsubsection*{Auxiliar 1}
-        \begin{align*}
-          \sumatoria{i=2^n + 1}{2^{n+1}} \frac{1}{2i-1}           & = \frac{1}{2^{n+1}+1} + \frac{1}{2^{n+1}+3} + \dots
-          + \frac{1}{2^{n+2}-1} > \frac{1}{2^{n+2}} + \frac{1}{2^{n+2}} + \dots + \frac{1}{2^{n+2}}
-          \igual{*}                                                                                                                                                                 \\
-                                                                  & \igual{*} \sumatoria{i=2^n + 1}{2^{n+1}} \frac{1}{2^{n+2}} = \frac{1}{2^{n+2}} \sumatoria{i=2^n + 1}{2^{n+1}} 1
-          \igual{\tiny Aux.2}
-          \frac{1}{2^{n+2}} 2^n = \frac{\cancelto{1}{2^n}}{2^2\cancelto{1}{2^n}} = \frac{1}{4}                                                                                      \\
-          \entonces \sumatoria{i=2^n + 1}{2^{n+1}} \frac{1}{2i-1} & > \frac{1}{4}
-          \entonces -\sumatoria{i=2^n + 1}{2^{n+1}} \frac{1}{2i-1} < -\frac{1}{4}
-          \entonces \frac{1}{4} -\sumatoria{i=2^n + 1}{2^{n+1}} \frac{1}{2i-1} < 0
-        \end{align*}
+        $$
+          \begin{array}{rcl}
+            \sumatoria{i=1}{2^{\blue{k} + 1}} \frac{1}{2i-1}
+             & \igual{\red{!}}     &
+            \sumatoria{i=1}{2 \cdot 2^{\blue{k}}} \frac{1}{2i-1}                                                         \\
+             & \igual{\red{!!!}}   &
+            \sumatoria{i=1}{2^{\blue{k}}} \frac{1}{2i-1}
+            +
+            \sumatoria{i=2^{\blue{k}} + 1}{2 \cdot 2^{\blue{k}}} \frac{1}{2i-1}                                          \\
+             & \mayor{\purple{HI}} &
+            \frac{\blue{k} + 3}{4} + \ub{\sumatoria{i=2^{\blue{k}} + 1}{2 \cdot 2^{\blue{k}}} \frac{1}{2i-1}}{\llamada1} \\
+          \end{array}
+        $$
+        Nuevamente \textit{hay que acotar}. Quiero llegar a $\frac{k + 4}{4}$, por lo tanto si pruebo que $\llamada1$
+        es mayor o igual que $\frac{1}{4}$ entonces logro lo buscado.
 
-        \subsubsection*{Auxiliar 2}
+        Voy a abrir la sumatoria para ver si puedo encontrar una cota inferior para cada término de la sumatoria:
+        $$
+          \begin{array}{rcl}
+            \sumatoria{i=2^{\blue{k}} + 1}{2 \cdot 2^{\blue{k}}} \frac{1}{2i-1}
+             & =                 &
+            \frac{1}{2^{k+1} + 1} +
+            \frac{1}{2^{k+1} + 2} +
+            \cdots +
+            \frac{1}{2^{k+1} + 2^k + 2}                        \\
+             & \mayor{\red{!!!}} &
+            \frac{1}{2^{k+1} + 2^k + 2} +
+            \frac{1}{2^{k+1} + 2^k + 2} +
+            \cdots +
+            \frac{1}{2^{k+1} + 2^k + 2}                        \\
+             & =                 &
+            \frac{1}{3 \cdot 2^{\blue{k}} + 2} +
+            \frac{1}{3 \cdot 2^{\blue{k}} + 2} +
+            \cdots +
+            \frac{1}{3 \cdot 2^{\blue{k}} + 2}                 \\
+             & \mayor{\red{!}}   &
+            \frac{1}{3 \cdot 2^{\blue{k}} + 6} +
+            \frac{1}{3 \cdot 2^{\blue{k}} + 6} +
+            \cdots +
+            \frac{1}{3 \cdot 2^{\blue{k}} + 6}                 \\
+             & \igual{\red{!}}   &
+            \frac{2^{\blue{k}} + 2}{3 \cdot 2^{\blue{k}} + 6}  \\
+             & =                 &
+            \frac{2^{\blue{k}} + 2}{3\cdot (2^{\blue{k}} + 2)} \\
+             & =                 &
+            \frac{1}{3}                                        \\
+             & >                 &
+            \frac{1}{4}
+          \end{array}
+        $$
+        Mostrando así que $\llamada1$ es efectivamente mayor que $\frac{1}{4}$
+        Si te perdiste en la acotación, la idea fue acotar por el término más chico de todos, \textit{el último}. Una vez que
+        toooodos los términos son iguales, sumé. Recordar que mientras más grande el \textit{denominador}, más chico es el número.
 
-        Cantidad de sumandos en una sumatoria
-        \begin{align*}
-          \sumatoria{i=A}{B}a_i = a_A + \dots + a_B \\
-          \# Elementos = \sumatoria{i=A}{B}1 = B + 1 - A
-        \end{align*}
+        Por lo tanto quedó que $p(\blue{k} + 1)$ es verdadera.
 
-        Calculemos la cantidad de sumandos en $ \sumatoria{i=2^n + 1}{2^{n+1}} \frac{1}{2i-1}$
-        \begin{align*}
-          B = 2^{n+1}, A = 2^n + 1 \entonces & \# Elementos = B + 1 - A = 2^{n+1} + 1  - (2^n + 1)
-          = 2 \cdot 2^n + 1 - 2^n -1                                                               \\
-          \entonces                          & \# Elementos = 2^n
-        \end{align*}
+        Dado que $p(1), p(\blue{k}) \ytext p(\blue{k + 1})$ son verdaderas,
+        por principio de inducción también lo es $p(n) \paratodo n \en \naturales$
 
   \item $P(n): \sumatoria{i=1}{n} \frac{1}{i!} \leq 2 - \frac{1}{2^{n-1}}, \ n \en \naturales$.
         \begin{enumerate}[label=\arabic*)]
