--- a/4-guia/ejercicios-4/ej-23-4.tex
+++ b/4-guia/ejercicios-4/ej-23-4.tex
@@ -87,7 +87,7 @@
           \entonces (a,b)
           \igual{\red{!!}}
           \llave{l}{
-            (\pm1, 5)
+            (\pm1, -5)
           }
         $$
 
@@ -179,8 +179,8 @@
 
         $4a+4$ tiene que dividir a 16, onda $\frac{16}{4a + a} \en \enteros$ por lo tanto necesitamos:
         $$
-          4a + a \en \set{\pm1,\pm2,\pm4,\pm8,\pm16}
-        $$.
+          4a + a \en \set{\pm1,\pm2,\pm4,\pm8,\pm16}.
+        $$
         Teniendo en cuenta que $4a + 4 \en \enteros$ y también que $a \en \enteros$, quedan como únicos posibles valores:
         $$
           \begin{array}{rcc}
@@ -198,4 +198,5 @@
 \begin{aportes}
   \item \aporte{\dirRepo}{naD GarRaz \github}
   \item \aporte{https://github.com/a18delsol}{Juan Iglesias \github}
+  \item \aporte{https://github.com/MPoncini}{M Poncini \github}
 \end{aportes}
